[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42.0", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "io-util",
    "sync"
] } # async networking
bytes = "1.9.0" # helps manage buffer
anyhow = "1.0.94" # error
log = "0.4.22"
env_logger = "0.11.5"